# voiceagent

./: README.md  pyproject.toml  requirements.txt
voiceagent/: __init__.py  transcriber.py  voice_agent.py
